<resources>
    <string name="app_name">Yellow Family Trivia</string>
    <string name="QuestionCounterText">Question %s</string>
    <string name="ScoreCounterText">Score: %s</string>
    <string name="Button">Empty</string>
    <string name="timerText">Time left: %d</string>
    <string name="ErrorCount">"Mistakes: %s%s%s"</string>
    <string name="Easy">"Easy"</string>
    <string name="Medium">"Medium"</string>
    <string name="Hard">"Hard"</string>
    <string name="MainMenu">"THE\nSIMPSONS\nQUIZ"</string>
    <string name="Play">"PLAY"</string>
    <string name="About">"ABOUT"</string>
    <string name="BackButtonTitle">back</string>
</resources>
