<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D3461">

    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="fill_parent"
        android:layout_height="253dp"
        android:fontFamily="@font/simpsons"
        android:text="@string/MainMenu"
        android:textAlignment="center"
        android:textColor="#E3D347"
        android:textSize="52sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:text="@string/Play"
        android:fontFamily="@font/simpsons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuText" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="96dp"
        android:text="@string/About"
        android:fontFamily="@font/simpsons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyRadioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/difficultyRadioGroup"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:background="#B5ABAB"
        android:backgroundTint="@color/colorPrimary"
        android:checkedButton="@id/radio_easy"
        android:fontFamily="@font/simpsons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton">

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:fontFamily="@font/simpsons"
            android:foregroundTint="#000000"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Easy"
            android:textAlignment="center"
            android:textColor="#fff" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:fontFamily="@font/simpsons"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Medium"
            android:textAlignment="center"
            android:textColor="#fff" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="#FFFFFF"
            android:fontFamily="@font/simpsons"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Hard"
            android:textAlignment="center"
            android:textColor="#fff" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>